Changed: post_create_thread now always returns false on failure, instead of -1 Changed: thread_merge and thread_split now do much more processing in SQL with far fewer quries and less likelyhood of going wrong. Changed: Mark as unread uses select box to pick post ID to prevent errors when entering number too high or too low. Fixed: padding on search_button in FireFox made the image appear offset incorrectly.

--- a/forum/styles/Black/style.css
+++ b/forum/styles/Black/style.css
@@ -1111,9 +1111,12 @@ a {
 }
 
 .search_button {
-    height: 100%;
     background-color: #FFFFFF;
     border: none;
+    cursor: pointer;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     vertical-align: top;
 }
 
