--- a/forum/styles/tehforum/style.css
+++ b/forum/styles/tehforum/style.css
@@ -1115,9 +1115,12 @@ a {
 }
 
 .search_button {
-    height: 100%;
     background-color: #FFFFFF;
     border: none;
+    cursor: pointer;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     vertical-align: top;
 }
 
